--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    margin: 0 auto;
 }
 .navbar > h1{
     margin-left: 30px;
@@ -18,7 +19,7 @@
 }
 
 .ikinci_img_yazi{
-    width: 30%;
+    width: 35%;
     height: 40%;
     margin: 15px;
     box-shadow:  2px 5px 0 rgba(0,0,0,0.16),
@@ -32,9 +33,23 @@
 .ikinci_hisse{
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
 }
 .ikinci_img_yazi > h3{
     margin: 10px;
-    box-shadow: 5,5,0,0;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .ikinci_hisse{
+        flex-wrap: nowrap;
+        flex-direction:column;   
+    }
+    .ikinci_img_yazi{
+        min-width: 90%;
+    }
+    .ikinci_img_yazi >img{
+        width: 100%;
+        object-fit: cover;
+    }
+    
 }
